inclued the login and registration apis
